[gd_scene load_steps=6 format=3 uid="uid://dwrvdyyh367ok"]

[ext_resource type="Texture2D" uid="uid://58hba2asbows" path="res://Assets/Images/Object/Note2.png" id="1_32yaf"]
[ext_resource type="Script" path="res://Scripts/Objects/note.gd" id="1_eqgfl"]
[ext_resource type="Texture2D" uid="uid://c6bgmha5xby76" path="res://Assets/Images/Object/Note.png" id="3_6aeij"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wbtsv"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8k0cc"]
radius = 58.0086

[node name="Node2D" type="StaticBody2D"]
script = ExtResource("1_eqgfl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wbtsv")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.36, 0.36)
texture = ExtResource("1_32yaf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8k0cc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -216.0
offset_right = -62.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.57831, 3.57831)
texture = ExtResource("3_6aeij")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
